# web-motor-control

./: .gitignore  README.md  sdkconfig
main/: CMakeLists.txt  can_monitor.c  can_monitor.h  gcode_unified_control.c  gcode_unified_control.h  main.c  motor_control.c  motor_control.cpp  motor_control.h  motor_status_scheduler.c  motor_status_scheduler.h  softap_example_main.c  uart_monitor.c  uart_monitor.h  web_interface.c  web_interface.h  wifi_http_server.c  wifi_http_server.h
wifi_softap/: motor_precision_gui.py  motor_precision_test.py  test_report_generation.py  启动GUI.py  绘制曲线.py  读多摩川编码器.py
